--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "smart-assign",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a smarter version of Object.assign",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0"
-    ]
   },
   "author": {
     "name": "seelikes",
@@ -27,5 +21,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^20.0.4"
-  }
+  },
+  "files": [
+    "lib"
+  ]
 }
